--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   sqflite: ^2.2.2
   string_validator: ^0.3.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
