--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   string_validator: ^0.3.0
   path: ^1.8.2
   intl: ^0.18.0
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
