--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.0
   path_provider: ^2.0.12
   image_picker: ^0.8.6+1
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
