--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.6+1
   image_cropper: ^3.0.1
   permission_handler: ^10.2.0
+  flutter_image_compress: ^2.0.2
 
 dev_dependencies:
   flutter_test:
