--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.6 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,9 +40,9 @@ dependencies:
   path: ^1.8.2
   intl: ^0.18.0
   path_provider: ^2.0.12
-  image_picker: ^0.8.6+1
-  image_cropper: ^3.0.1
-  permission_handler: ^10.2.0
+  image_picker: ^1.0.4
+  image_cropper: ^5.0.0
+  permission_handler: ^11.0.1
   flutter_image_compress: ^2.0.2
   archive: ^3.3.7
   string_validator: ^1.0.0
@@ -56,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
